src/test/resources/parser/valid/if/ifBlock.sbsc
// test if expression with a block

a = if(true) {
    return 5;
} else {
    return 4;
};

assert(a == 5);

b = if(false) {
    return 5;
} else {
    return 4;
};

assert(b == 4);

return true;