src/test/resources/parser/invalid/returnMismatch.sbsc
a = if(true) {
    return "a";

    return 2;
};